--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.username=root
 spring.datasource.password=password
 
 # insert name of table here
-db.tableUsers=users_3_1_3
+db.tableUsers=users
 
 # Hibernate properties
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
