--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,8 @@ spring.datasource.password=password
 
 # insert name of table here
 db.tableUsers=users
+db.tableRoles=roles
+db.manyToMany=user_role
 
 # Hibernate properties
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
